--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@
 body {
   font-family: "Inter", sans-serif;
   color: var(--c-text-primary);
-  background-color: var(--c-background-primary);
+  /* background-color: var(--c-background-primary); */
   line-height: 1.5;
 }
 
@@ -25,10 +25,10 @@ input, button, select, textarea {
 .modal {
   width: 90%;
   max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* margin-top: 10vh;
+  margin-bottom: 10vh; */
   background-color: #FFF;
   border-radius: 0.5rem;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
