--- a/templates/main.html
+++ b/templates/main.html
@@ -216,6 +216,7 @@
 
     
     <div style="margin:2%">
+      <iframe src="/static/html/output.html" width="100%" height="600px" style="border: 0px solid black"></iframe>
     </div>
     
 
