--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -23,11 +23,13 @@
   }
   
   .modal {
-    width: 135%;
+    width: 100%;
     max-width: 750px;
+    min-height: 700px;
     background-color: #FFF;
     border-radius: 0.75rem; /* 0.5rem * 1.5 */
     box-shadow: 0 7.5px 22.5px rgba(0, 0, 0, 0.2); /* 5px * 1.5, 15px * 1.5 */
+    display: table
   }
   
   .modal-header {
@@ -50,20 +52,20 @@
     max-width: 2.25rem; /* 1.5rem * 1.5 */
   }
   
-  .btn-close {
+  /* .btn-close {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 3.375rem; /* 2.25rem * 1.5 */
-    height: 3.375rem; /* 2.25rem * 1.5 */
-    border-radius: 0.375rem; /* 0.25rem * 1.5 */
+    width: 3.375rem;
+    height: 3.375rem;
+    border-radius: 0.375rem;
     border: none;
     background-color: transparent;
   }
 
   .btn-close:hover, .btn-close:focus {
     background-color: var(--c-action-primary-accent);
-  }
+  } */
   
   .modal-body {
     padding: 1.5rem 2.25rem; /* 1rem * 1.5 */
@@ -113,7 +115,7 @@
     font-size: 1.5em; /* Increase font size */
   }
 
-  .upload-area-description {
+  /* .upload-area-description {
     display: block;
     color: var(--c-text-secondary);
     font-size: 1.5em;
@@ -122,8 +124,8 @@
   .upload-area-description strong{
     color: var(--c-action-primary);
     font-weight: 700;
-    font-size: 1.5em; /* Increase font size */
-  }
+    font-size: 1.5em;
+  } */
   
   .modal-footer {
     padding: 1.5rem 2.25rem 2.25rem; /* 1rem * 1.5 */
