--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
 
 
     <style>
-        /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
+
         body {
             margin: 0;
         }
@@ -123,7 +123,7 @@
         padding: 30px;
         color: #fff;
         background-color: #eee;
-        height: 700px;
+        height: 100vh;
         background: -webkit-linear-gradient(
             rgba(52, 73, 94, 0.8),
             rgba(52, 73, 94, 0.8)
@@ -181,7 +181,7 @@
       <div style="margin-top:130px" class="container">
         <h1 data-aos="fade-left">EchoPose</h1>
         <br><hr><hr>
-        <h2 style="text-align:center" data-aos="fade-right">Pose Tracking</h2>
+        <!-- <h2 style="text-align:center" data-aos="fade-right">Pose Tracking</h2> -->
       </div>
     </div>
 
@@ -208,17 +208,51 @@
 
     <!-- <div w3-include-html="/static/file_upload.html"></div> -->
     <!-- <object type="text" data="file_upload.html" width="50%" height="50%"></object> -->
-    <div>
-      <iframe src="/static/html/file_upload.html" width="560px" height="700px" style="border: none; margin-left:7%; margin-top: 2%"></iframe>
-      <iframe src="/static/html/file_upload.html" width="475px" height="528px" style="border: none; margin-right: 7%; margin-top: 2%; float:right"></iframe>
+    <div style="margin-bottom: 50px">
+      <iframe src="/static/html/file_upload.html" width="700px" height="700px" style="border: none; margin-left:7%; margin-top: 2%" id="reference_upload"></iframe>
+      <iframe src="/static/html/file_upload.html" width="700px" height="700px" style="border: none; margin-right: 7%; margin-top: 2%; float:right" id="user_upload"></iframe>
     </div>
-    
+    <div style="float:left; text-align: right; margin-left: 15%;">
+      <div style="margin-bottom:5px">
+        <label for ="Youtube URL" > Youtube URL:</label>
+        <input class="yt-textbox" type="text" class="centered-textbox" id="referenceYT" name="Youtube URL" placeholder="https://www.youtube.com/watch?v=jNQXAC9IVRw&vl=en"><br>
+      </div>
+    <div style ="margin-bottom: 5px">
+      <label for ="Youtube URL" > Start Time:</label>
+      <input class="yt-textbox" type="text" class="centered-textbox" id="referenceStart" name="Youtube URL" placeholder="mm:ss"><br>
+    </div>
+      <label for ="Youtube URL"> End Time:</label>
+      <input class="yt-textbox" type="text" class="centered-textbox" id="referenceEnd" name="Youtube URL" placeholder="mm:ss">
+    </div>
 
+
+
+
+
+    <div style="float:right; text-align: right; margin-right: 18%;">
+      <div style="margin-bottom: 5px;">
+      <label for ="Youtube URL"> Youtube URL:</label>
+      <input class="yt-textbox" type="text" class="centered-textbox" id="userYT" name="Youtube URL" placeholder="https://www.youtube.com/watch?v=jNQXAC9IVRw&vl=en"> <br>
+      </div>
+      <div style = "margin-bottom: 5px;">
+      <label for ="Youtube URL" > Start Time:</label>
+      <input class="yt-textbox" type="text" class="centered-textbox" id="userStart" name="Youtube URL" placeholder="mm:ss"> <br>
+      </div>
+
+      <label for ="Youtube URL" > End Time:</label>
+      <input class="yt-textbox" type="text" class="centered-textbox" id="userEnd" name="Youtube URL" placeholder="mm:ss">
+    </div>
+
+
+
+    <br>
+    <div style="text-align: center;">
+      <button onclick="">Submit</button>
+    </div>
     
     <div style="margin:2%">
       <iframe src="/static/html/output.html" width="100%" height="600px" style="border: 0px solid black"></iframe>
     </div>
-    
 
     <!-- About Me -->
     <div class="container">
@@ -247,6 +281,8 @@
     <script>
         AOS.init({duration: 2400,}); 
         
+        
+
         function includeHTML() {
   var z, i, elmnt, file, xhttp;
   /* Loop through a collection of all HTML elements: */
@@ -276,7 +312,78 @@
 }
 
       includeHTML();
-    </script>
+      
+        
+      let yt = document.getElementById('Youtube URL')
+      // console.log(yt)
     
+      function name(inp) {
+      // console.log(yt.value)
+    }
+
+    </script>
+  <script>
+    let reference_upload = document.getElementById('reference_upload');
+    let user_upload = document.getElementById('user_upload');
+
+    let reference_innerDoc = reference_upload.contentDocument || reference_upload.contentWindow.document;
+    let reference_dropBox = reference_innerDoc.getElementById('dropBox');
+    let reference_fileDisplay = reference_innerDoc.getElementById('fileDisplay');
+
+    let user_innerDoc = user_upload.contentDocument || user_upload.contentWindow.document;
+    let user_dropBox = user_innerDoc.getElementById('dropBox');
+    let user_fileDisplay = user_innerDoc.getElementById('fileDisplay')
+    
+    reference_dropBox.addEventListener('dragover', function(e) {
+        e.preventDefault();
+        reference_dropBox.style.backgroundColor = '#f0f0f0';
+    });
+
+    reference_dropBox.addEventListener('dragleave', function(e) {
+        e.preventDefault();
+        reference_dropBox.style.backgroundColor = '';
+    });
+
+    reference_dropBox.addEventListener('drop', function(e) {
+        e.preventDefault();
+        reference_dropBox.style.backgroundColor = '';
+        handleDroppedReferenceFile(e.dataTransfer.files[0]);
+    });
+
+    user_dropBox.addEventListener('dragover', function(e) {
+      e.preventDefault();
+      user_dropBox.style.backgroundColor = '#f0f0f0'
+    });
+
+
+    user_dropBox.addEventListener('dragleave', function(e) {
+      e.preventDefault();
+      user_dropBox.style.backgroundColor = ''
+    })
+
+    user_dropBox.addEventListener('drop', function(e) {
+      e.preventDefault();
+      user_dropBox.style.backgroundColor = ''
+      handleDroppedUserFile(e.dataTransfer.files[0]);
+    })
+    //display:flex
+    function handleDroppedReferenceFile(file) {
+        if (file.type.includes("mp4")) {
+          console.log(file)
+          reference_dropBox.style.display = "none"
+          reference_fileDisplay.innerHTML = file.name
+          reference_fileDisplay.style.display = "block"
+        }
+    }
+
+    function handleDroppedUserFile(file) {
+      if (file.type.includes("mp4")) {
+        user_dropBox.style.display = "none"
+        user_fileDisplay.innerHTML = file.name
+        user_fileDisplay.style.display = "block"
+      }
+    }
+
+  </script>
 </body>
 </html>
