--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -29,7 +29,9 @@
     background-color: #FFF;
     border-radius: 0.75rem; /* 0.5rem * 1.5 */
     box-shadow: 0 7.5px 22.5px rgba(0, 0, 0, 0.2); /* 5px * 1.5, 15px * 1.5 */
-    display: table
+    display: flex;
+    flex-direction: column;
+
   }
   
   .modal-header {
@@ -74,21 +76,27 @@
   .modal-body {
     padding: 1.5rem 2.25rem; /* 1rem * 1.5 */
   }
+
+  .modal-logo {
+    display: flex;
+  }
   
   .modal-title {
     font-weight: 700;
     font-size: 1.5em; /* Increase font size */
+    font-family: "Space Mono", monospace; 
     color:#000000
   }
   
   .modal-description {
+    font-family: "Space Mono", monospace;
     color: var(--c-text-secondary);
   }
   
   .upload-area {
     margin-top: 1.875rem; /* 1.25rem * 1.5 */
     border: none;
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23ccc' stroke-width='3' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23ccc' stroke-width='3' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
     background-color: transparent;
     padding: 4.5rem; /* 3rem * 1.5 */
     width: 100%;
@@ -144,6 +152,7 @@
   
   .modal-footer [class*=btn-] {
     margin-left: 1.125rem; /* 0.75rem * 1.5 */
+    margin-top: auto;
   }
   
   .btn-secondary, .btn-primary {
@@ -158,4 +167,21 @@
     color: #FFF;
     background-color: var(--c-action-primary);
     font-size: 1.5em; /* Increase font size */
+  }
+
+  .btn-secondary:hover {
+    background-color: var(--c-action-primary-accent);
+  }
+
+
+  .button {
+    background-color: #787276;
+    border-radius: 10px;
+    color: #000000;
+    
+  }
+
+
+  .button:hover{
+    background-color:#2e44ff;
   }
